--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,11 @@
-<%= link_to "Add a Post", new_post_path %>
+<%= link_to "Submit a New Link", new_post_path %> <-- OR -->
+<%= link_to "Submit a Text Post", new_post_path %>
 <div>
-  <% @posts.each do |post|%>
+  <% @posts.each do |post| %>
     <ul>
       <div>
         <li><h3><%= link_to post.title.upcase, post.url %></h3> submitted <%= time_ago_in_words(post.created_at)%> ago by <%= post.user.email %></li>
-        <%= link_to "Comment", post_path(post) %>
+        <%= link_to pluralize(post.comments.count, "comment"), post_comment_path(post, post.comments[:id]) %>
       </div>
     </ul>
   <% end %>
