--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @post.title %></h2>
+<h2><%= link_to @post.title, @post.url %></h2>
 
 <%= form_for([@post, @comment]) do |form| %>
   <%= form.text_area :description %>
@@ -9,7 +9,7 @@
   <% @comments.each do |comment| %>
     <ul>
       <li><h3><%= comment.description %></h3></li>
-    commented by <%= comment.user.email %>
+      commented by <%= comment.user.email %> <%= time_ago_in_words(comment.created_at) %> ago
     </ul>
   <% end %>
 </div>
